[gd_scene load_steps=8 format=3 uid="uid://bp1vomugm8ugs"]

[ext_resource type="Texture2D" uid="uid://cqdkw6b4bmsk5" path="res://Map_Icons/icon.svg" id="1_s2aye"]
[ext_resource type="Script" path="res://Client_Objects/client_train.gd" id="2_oqpe8"]
[ext_resource type="Script" path="res://Client_Objects/client_window.gd" id="3_fcktn"]
[ext_resource type="Texture2D" uid="uid://dbdjkc3txkt6y" path="res://Gui/Icons/add.png" id="4_o00sv"]
[ext_resource type="Texture2D" uid="uid://cnt0fnx73uuf8" path="res://Gui/Icons/go.png" id="5_ssasf"]
[ext_resource type="Texture2D" uid="uid://cauwoswolv6v5" path="res://Gui/Icons/no.png" id="6_ame1o"]
[ext_resource type="Texture2D" uid="uid://b02j10d0auchi" path="res://Gui/Icons/go_back.png" id="7_6x7to"]

[node name="Train" type="Sprite2D"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_s2aye")
script = ExtResource("2_oqpe8")

[node name="Window" type="Window" parent="."]
auto_translate_mode = 1
position = Vector2i(0, 36)
size = Vector2i(600, 400)
script = ExtResource("3_fcktn")

[node name="Name" type="RichTextLabel" parent="Window"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center][font_size=35]Train[/font_size][/center]"
fit_content = true
autowrap_mode = 0

[node name="Routes" type="ItemList" parent="Window"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0

[node name="Add_Stop" type="Button" parent="Window/Routes"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -29.0
offset_right = 29.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
focus_mode = 0
toggle_mode = true
icon = ExtResource("4_o00sv")

[node name="Start" type="Button" parent="Window/Routes"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -29.0
offset_right = 29.0
offset_bottom = 58.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
focus_mode = 0
icon = ExtResource("5_ssasf")

[node name="Stop" type="Button" parent="Window/Routes"]
layout_mode = 0
offset_left = 221.0
offset_top = 29.0
offset_right = 279.0
offset_bottom = 87.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
icon = ExtResource("6_ame1o")

[node name="Back" type="Button" parent="Window/Routes"]
layout_mode = 0
offset_left = 221.0
offset_top = 58.0
offset_right = 279.0
offset_bottom = 116.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
icon = ExtResource("7_6x7to")

[node name="Goods" type="ItemList" parent="Window"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_vertical = 2
focus_mode = 0

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/Routes/Add_Stop" to="Window" method="_on_add_stop_pressed"]
[connection signal="pressed" from="Window/Routes/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Window/Routes/Stop" to="." method="_on_stop_pressed"]
